<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Calculator</string>


	<string name="button_0">0</string>
	<string name="button_1">1</string>
	<string name="button_2">2</string>
	<string name="button_3">3</string>
	<string name="button_4">4</string>
	<string name="button_5">5</string>
	<string name="button_6">6</string>
	<string name="button_7">7</string>
	<string name="button_8">8</string>
	<string name="button_9">9</string>

	<string name="button_decimal">.</string>
	<string name="button_plus_minus">+/&#8722;</string>
	<string name="button_brackets">( )</string>

	<string name="button_plus">+</string>
	<string name="button_minus">&#8722;</string>
	<string name="button_times">&#215;</string>
	<string name="button_div">&#247;</string>

	<string name="button_exec">=</string>

	<string name="button_clear">C</string>
	<string name="button_back">&#8592;</string>

</resources>
