<?xml version="1.0" encoding="utf-8"?>
<pl.info.czerwinski.android.calculator.widget.GridLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:colsCount="4"
		app:rowsCount="5"
		app:horizontalPadding="@dimen/button_horizontal_margin"
		app:verticalPadding="@dimen/button_vertical_margin"
		style="@style/AppTheme.Keypad">

	<Button
			android:id="@+id/button_clear"
			android:text="@string/button_clear"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Special"/>

	<Button
			android:id="@+id/button_times"
			android:text="@string/button_times"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Operation"/>

	<Button
			android:id="@+id/button_div"
			android:text="@string/button_div"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Operation"/>

	<Button
			android:id="@+id/button_back"
			android:text="@string/button_back"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Special"/>

	<Button
			android:id="@+id/button_7"
			android:text="@string/button_7"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Numeric"/>

	<Button
			android:id="@+id/button_8"
			android:text="@string/button_8"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Numeric"/>

	<Button
			android:id="@+id/button_9"
			android:text="@string/button_9"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Numeric"/>

	<Button
			android:id="@+id/button_brackets"
			android:text="@string/button_brackets"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Operation"/>

	<Button
			android:id="@+id/button_4"
			android:text="@string/button_4"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Numeric"/>

	<Button
			android:id="@+id/button_5"
			android:text="@string/button_5"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Numeric"/>

	<Button
			android:id="@+id/button_6"
			android:text="@string/button_6"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Numeric"/>

	<Button
			android:id="@+id/button_minus"
			android:text="@string/button_minus"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Operation"/>

	<Button
			android:id="@+id/button_1"
			android:text="@string/button_1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Numeric"/>

	<Button
			android:id="@+id/button_2"
			android:text="@string/button_2"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Numeric"/>

	<Button
			android:id="@+id/button_3"
			android:text="@string/button_3"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Numeric"/>

	<Button
			android:id="@+id/button_plus"
			android:text="@string/button_plus"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Operation"/>

	<Button
			android:id="@+id/button_0"
			android:text="@string/button_0"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Numeric"/>

	<Button
			android:id="@+id/button_decimal"
			android:text="@string/button_decimal"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Numeric"/>

	<Button
			android:id="@+id/button_plus_minus"
			android:text="@string/button_plus_minus"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Numeric"/>

	<Button
			android:id="@+id/button_exec"
			android:text="@string/button_exec"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			style="@style/AppTheme.Button.Special"/>

</pl.info.czerwinski.android.calculator.widget.GridLayout>